--- a/src/css/modules/_listModule.scss
+++ b/src/css/modules/_listModule.scss
@@ -160,7 +160,7 @@
 	}
 }
 
-@mixin mobile-portrait {
+@mixin mobile {
 	.list-container {
 		margin-top: 0;
 	}
